# museum

./: CMakeLists.txt  swan_planning.md
src/: CompilationFlowWindow.cpp  CompilerTestsWindow.cpp  CompilerTestsWindow.hpp  DirectoryPicker.cpp  DirectoryPicker.hpp  FactorSpinBox.cpp  FactorSpinBox.hpp  FileDatabase.cpp  FileDatabase.hpp  FilePicker.cpp  FilePicker.hpp  GlobalFileDatabases.cpp  GlobalFileDatabases.hpp  HexView.cpp  HexView.hpp  LangtonGenerateRandomPopup.cpp  LangtonGenerateRandomPopup.hpp  LangtonSimulationWorker.cpp  LangtonSimulationWorker.hpp  LangtonSimulatorWindow.cpp  LangtonSimulatorWindow.hpp  NtfsDatabase.cpp  NtfsDatabase.hpp  PausableTimer.hpp  RawGridView.cpp  RawGridView.hpp  StartWindow.cpp  SwanDebugWindow.cpp  SwanDebugWindow.hpp  SwanDockWindow.cpp  SwanDockWindow.hpp  main.cpp  populateCommonMenuBar.cpp  primitives.hpp  util.cpp  util.hpp  util_windows.cpp  util_windows.hpp
src/langton/: examples.cpp  langton.hpp  misc.cpp  parse.cpp  pgm8.cpp  randomized.cpp  save_state.cpp  step.cpp  util.cpp  util.hpp
